--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
+  <div id = "container"> </div>
     <script>
+    let container = document.getElementById("container");
     for (let r = 0; r < 16; r++){
       for (let c = 0; c< 16; c++){
-        document.createElement("div");
+        let newDiv = document.createElement("div");
+        newDiv.textContent = `r: ${r} c: ${c}`;
+        newDiv.className = "box";
+        container.appendChild(newDiv);
       }
     }
     </script>
