made the css flex better

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     for (let r = 0; r < 16; r++){
       for (let c = 0; c< 16; c++){
         let newDiv = document.createElement("div");
-        newDiv.textContent = `r: ${r} c: ${c}`;
+        //newDiv.textContent = `r: ${r} c: ${c}`;
         newDiv.className = "box";
         container.appendChild(newDiv);
       }
